# katemate

./: AUTHORS  ProjectHome.md  configure.in.in  katemate.conf.xml
branches/kde4-port/: CMakeLists.txt  configure  katemate.kdevelop
branches/kde4-port/doc/: CMakeLists.txt
branches/kde4-port/doc/en/: CMakeLists.txt  Makefile.am
branches/kde4-port/src/: KateConfigPageWidget.ui  KateMateConfigDialog.ui.h  SnippetConfigWidget.ui  kateconfigpage.cpp  kateconfigpage.h  katemate.desktop  katemateconfigdia.h  katematexml.cpp  snippet.h  snippetconfigpage.cpp  snippetlistviewitem.h  snippetprocessor.cpp
branches/kde4-port/templates/: cpp
doc/en/: index.docbook
src/: CMakeLists.txt  KateMateConfigDialog.ui  katemate.lsm  katematehelpers.h  katematexml.cpp  katematexml.h  plugin_katemate.cpp  plugin_katemate.h  snippet.h  snippetconfigpage.cpp  snippetconfigpage.h  snippetlistviewitem.cpp  snippetlistviewitem.h  snippetprocessor.h
trunk/: Doxyfile
trunk/doc/: Makefile.am
trunk/src/: KateConfigPageWidget.ui  KateMateConfigDialog.ui  Makefile.am  SnippetConfigWidget.ui  katemateconfigdia.cpp  plugin_katemate.rc  snippetprocessor.cpp
